# slam_evaluator

./: .gitmodules  dua-template.md
docker/container-jetson6/: Dockerfile
docker/container-jetson6/.devcontainer/: devcontainer.json  docker-compose.yaml
docker/container-x86-cudev/: Dockerfile  zshrc
docker/container-x86-cudev/.devcontainer/: devcontainer.json  docker-compose.yaml
src/ros2_grandtour_publishers/: README.md  package.xml  setup.cfg  setup.py
src/ros2_grandtour_publishers/config/: grandtour_publishers.yaml
src/ros2_grandtour_publishers/launch/: grandtour_publishers.launch.py
src/ros2_grandtour_publishers/ros2_grandtour_publishers/: alignment.py  geometry.py  grandtour_publisher_node.py  zarr_timeseries.py
src/ros2_grandtour_publishers/test/: test_alignment.py
src/ros2_hilti_publishers/: package.xml  setup.cfg  setup.py
src/ros2_hilti_publishers/config/: hilti_publisher.yaml
src/ros2_hilti_publishers/launch/: hilti_publisher.launch.py
src/ros2_hilti_publishers/ros2_hilti_publishers/: hilti_publisher_node.py
src/ros2_hilti_publishers/urdf/: hilti.urdf.xacro
src/ros2_iilabs3d_publishers/: package.xml  setup.cfg  setup.py
src/ros2_iilabs3d_publishers/config/: iilabs3d_gt_publisher.yaml
src/ros2_iilabs3d_publishers/launch/: iilabs3d_gt_publisher.launch.py
src/ros2_openloris_publishers/: README.md  package.xml  setup.cfg  setup.py
src/slam_evaluator/: CMakeLists.txt  package.xml
src/slam_evaluator/config/: fast_lio_iilabs3d_livox_mid-360.yaml  fast_lio_iilabs3d_ouster_os1-64.yaml  fast_lio_iilabs3d_robosense_rs-helios-5515.yaml  fast_lio_iilabs3d_velodyne_vlp-16.yaml  faster_lio_iilabs3d_livox_mid-360.yaml  faster_lio_iilabs3d_ouster_os1-64.yaml  faster_lio_iilabs3d_robosense_rs-helios-5515.yaml  faster_lio_iilabs3d_velodyne_vlp-16.yaml  grandtour_rosbag_qos.yaml  lio_sam.yaml  lio_sam_grandtour_arc2.yaml  lio_sam_grandtour_arc3.yaml  lio_sam_grandtour_arc7.yaml  lio_sam_grandtour_con4.yaml  lio_sam_grandtour_eig1.yaml  lio_sam_grandtour_eth1.yaml  lio_sam_grandtour_heap1.yaml  lio_sam_grandtour_snow2.yaml  lio_sam_grandtour_spx2.yaml  lio_sam_hilti.yaml  lio_sam_iilabs3d.yaml  lio_sam_kitti.yaml  lio_sam_openloris.yaml  lio_sam_save.yaml  monocular_depth_openloris_depth_anything-v3.yaml  spark_fast_lio_iilabs3d_livox_mid-360.yaml  spark_fast_lio_iilabs3d_ouster_os1-64.yaml  spark_fast_lio_iilabs3d_robosense_rs-helios-5515.yaml  spark_fast_lio_iilabs3d_velodyne_vlp-16.yaml  voxel_map_iilabs3d_livox_mid-360.yaml  voxel_map_iilabs3d_ouster_os1-64.yaml  voxel_map_iilabs3d_robosense_rs-helios-5515.yaml  voxel_map_iilabs3d_velodyne_vlp-16.yaml
src/slam_evaluator/config/glim_iilabs3d_livox_mid-360/: config.json  config_global_mapping_gpu.json  config_odometry_gpu.json  config_preprocess.json  config_ros.json  config_sensors.json  config_sub_mapping_gpu.json
src/slam_evaluator/config/glim_iilabs3d_ouster_os1-64/: config_preprocess.json  config_ros.json  config_sensors.json
src/slam_evaluator/config/glim_iilabs3d_robosense_rs-helios-5515/: config_preprocess.json  config_sensors.json
src/slam_evaluator/config/glim_iilabs3d_velodyne_vlp-16/: config.json  config_preprocess.json  config_sensors.json
src/slam_evaluator/launch/: fast_lio_iilabs3d.launch.py  faster_lio_iilabs3d.launch.py  glim_iilabs3d.launch.py  lio_sam.launch.py  lio_sam_grandtour.launch.py  lio_sam_hilti.launch.py  lio_sam_iilabs3d.launch.py  lio_sam_kitti.launch.py  lio_sam_openloris.launch.py  lio_sam_openloris_monodepth.launch.py  lio_sam_save.launch.py  spark_fast_lio_iilabs3d.launch.py  voxel_map_iilabs3d.launch.py
src/slam_evaluator/rviz/: fast_lio_iilabs3d.rviz  faster_lio_iilabs3d.rviz  glim_iilabs3d.rviz  lio_sam_grandtour.rviz  lio_sam_hilti.rviz  lio_sam_iilabs3d.rviz  lio_sam_kitti.rviz  lio_sam_openloris.rviz  lio_sam_save.rviz  spark_fast_lio_iilabs3d.rviz  voxel_map_iilabs3d.rviz
src/slam_evaluator/scripts/: grandtour_bag_adapter.py  grandtour_prism_alignment.py  pointcloud_field_rescale.py
src/slam_evaluator/urdf/: hilti.urdf.xacro
tools/: analyzer.ipynb
(+18 files in other folders)
