<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_grandtour_publishers</name>
  <version>0.1.0</version>
  <description>ROS 2 publisher node for the ETH GrandTour dataset (raw zarr mission replay)</description>
  <maintainer email="alessandro.cretu2000@gmail.com">ErLex20</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros_py</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <!--
    zarr and numcodecs have no rosdep key and must be installed with pip
    (developed and tested against zarr==3.2.1, numcodecs==0.16.x):
      pip install zarr numcodecs
  -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
