<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_evaluator</name>
  <version>1.0.0</version>
  <description>ROS2 package for SLAM evaluation using KITTI dataset.</description>
  <maintainer email="info@dotxautomation.com">dotX Automation</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>dua_robot_localization</exec_depend>
  <exec_depend>dua_tf_server</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>faster_lio</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>glim_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lio_sam</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>ros2_iilabs3d_publishers</exec_depend>
  <exec_depend>ros2_openloris_publishers</exec_depend>
  <exec_depend>rosbag2_transport</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>scan_deskewer</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>voxel_map</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
